arreglamos la parte de las redes sociales
