# src/app/api/persons/route.ts
@@ -19,6 +19,11 @@ export async function POST(req: NextRequest) {
       fullName: data.fullName,
       birthday: data.birthday,
       email: data.email,
+      facebook: data.facebook,
+      instagram: data.instagram,
+      twitter: data.twitter,
+      linkedin: data.linkedin,
+      youtube: data.youtube,
       alias: data.alias,
       hobby: data.hobby,
       favoriteFood: data.favoriteFood,
@@ -29,6 +34,7 @@ export async function POST(req: NextRequest) {
       favoriteMusicGenre: data.favoriteMusicGenre,
       favoriteVideoGame: data.favoriteVideoGame,
       message: data.message,
+      bio: data.bio,
       roleId: data.roleId,
     },
   });
